recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:15: error: value - is not a member of object Int
    snowSide(Int-1,length/3)
                ^Koch:17: error: value - is not a member of object Int
    snowSide(Int-1,length/3)
                ^Koch:19: error: value - is not a member of object Int
    snowSide(Int-1,length/3)
                ^Koch:21: error: value - is not a member of object Int
    snowSide(Int-1,length/3)
                ^